fix some spacing in hero

--- a/gatsby-cmketech/src/assets/sass/layouts/_page.scss
+++ b/gatsby-cmketech/src/assets/sass/layouts/_page.scss
@@ -1,4 +1,3 @@
 main {
-    padding: 20px 40px;
-    max-width: 100%;
+    overflow: hidden;
 }
